--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <style>
   .elab_content #es-garnier.es-garnier {
     font-family: 'Montserrat', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 200;
+    font-weight: 400;
     font-size: 16px;
     line-height: 1.2;
     max-width: 1200px;
@@ -876,6 +876,7 @@
 
   .elab_content #es-garnier.es-garnier .divContainer .es-footer__img {
     max-width: 100%;
+    width: 200px;
     display: block;
     margin: 0 auto;
     margin-left: 0;
@@ -1637,7 +1638,7 @@
           *****Vartotojų testas, 72 moterys, 1 panaudojimas.
         </p>
         <div class="es-footer__logo">
-          <img src="img/logo-footer.png" alt="" class="es-footer__img" />
+          <img src="img/logo.png" alt="" class="es-footer__img" />
         </div>
         <div class="es-footer__featured-ingr">
           <img src="img/featured-ingr.png" alt="" class="es-footer__img" />
